# fifty_days_of_data_analysis_with_python

./: README.md  fifty_days_of_data_analysis_with_python.code-workspace  pyproject.toml
data/: asset_data_analysis.json
day_01/: day_01.ipynb
exercises/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb
