[tool.poetry]
name = "fifty-days-of-data-analysis-with-python"
version = "0.1.0"
description = "Exercises from the book '50 Days of Data Analysis with Python'"
authors = ["Vincent Ging Ho Yim <cenviity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
